--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
     "check": "biome check .",
     "check:unsafe": "biome check --write --unsafe .",
     "check:write": "biome check --write .",
@@ -15,6 +19,7 @@
     "lint:fix": "biome lint . --fix --unsafe"
   },
   "dependencies": {
+    "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-query": "^5.84.1",
@@ -23,9 +28,12 @@
     "@trpc/tanstack-react-query": "^11.4.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.44.4",
+    "drizzle-zod": "^0.8.3",
     "lucide-react": "^0.537.0",
     "next": "15.4.6",
     "next-themes": "^0.4.6",
+    "postgres": "^3.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "server-only": "^0.0.1",
@@ -43,6 +51,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@yehezkieldio/firefly": "^2.1.1",
+    "drizzle-kit": "^0.31.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5.9.2",
